--- a/results.html
+++ b/results.html
@@ -57,7 +57,7 @@
         // Change display based on whether they won or not
         if (winner) {
             document.getElementById('status-message').textContent = `Congrats, ${name}, YOU WON!`
-            document.getElementById('sub-message').textContent = `PACK YOUR BAGS, YOU'RE GOING TO ${choice.toUpperCase()}!`
+            document.getElementById('sub-message').textContent = `PACK YOUR BAGS, YOU'RE GOING TO ${choice}!`
             document.getElementById('status-message').style.color = color || 'crimson'
             document.getElementById('small-print').textContent = `Extras (${extras.join(', ')}) must be requested upon arrival at your destination`
         }
