--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results Page</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <main>
@@ -12,7 +12,7 @@
         <div>
             <h2 id="status-message"></h2>
             <h3 id="sub-message"></h3>
-            <img src="assets/images/aruba.jpg" class="mini-image">
+            <img src="/assets/images/aruba.jpg" class="mini-image">
             <h4 id="small-print"></h4>
             <h5 id="disclaimer"></h5>
             <div id="address1"></div>
@@ -57,7 +57,7 @@
         // Change display based on whether they won or not
         if (winner) {
             document.getElementById('status-message').textContent = `Congrats, ${name}, YOU WON!`
-            document.getElementById('sub-message').textContent = `PACK YOUR BAGS, YOU'RE GOING TO ${choice}!`
+            document.getElementById('sub-message').textContent = `PACK YOUR BAGS, YOU'RE GOING TO ${choice.toUpperCase}!`
             document.getElementById('status-message').style.color = color || 'crimson'
             document.getElementById('small-print').textContent = `Extras (${extras.join(', ')}) must be requested upon arrival at your destination`
         }
