--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
                     <!--Street Address Input -->
                     <label for="address">Your Street Address</label>
-                    <input type="text" id="address" name="address">
+                    <input type="text" id="address">
                 </div>
                 <div>
                     <!--City, State, and Zip Inputs -->
                     <label for="city">Your City</label>
                     <input type="text" id="city" name="city">
                     <label for="state">Your State</label>
-                    <select name="state" id="state" name="state">
+                    <select name="state" id="state">
                         <option value="AK">Alaska</option>
                         <option value="AL">Alabama</option>
                         <option value="AR">Arkansas</option>
