--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <!--Set Action and Method Properties -->
         <form action="/results.html" method="get"> 
             <div>
-                <label for="firstname">Your First Name</label><span class="required-field">*</span>
+                <label for="firstname">Your First Name<span class="required-field">*</span></label>
                 <input type="text" id="firstname" name="firstname" minlength="2" maxlength="35" required>
                 <!--Create a "lastname" input with type "text" -->
-                <label for="lastname">Your Last Name</label><span class="required-field">*</span>
+                <label for="lastname">Your Last Name<span class="required-field">*</span></label>
                 <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35" required>
                 <label for="age">Your Age</label>
                 <input type="number" name="age" id="age" min="21" max="120">
                 <h5>Must be 21 to enter Contest</h5>
-                <label for="pwd">Password (must be 6 letters)<span class="required-field">*</span></label>
-                <input type="password" id="pwd" name="pwd" pattern="[a-zA-Z0-9]{6}" title="6-digit Alphanumric Pass Code" required>
+                <label for="pwd">Password (must be 6 Characters)<span class="required-field">*</span></label>
+                <input type="password" id="pwd" name="pwd" pattern="[a-zA-Z0-9]{6}" title="6-Character Alphanumric Pass Code" required>
             </div>
             <!--Make fieldset and legend -->
             <fieldset>
